added react components, created navbar UI

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css?family=Alatsi|Baskervville&display=swap');
+
 .App {
   text-align: center;
 }
 
-.App-logo {
+/* .App-logo {
   height: 40vmin;
 }
 
@@ -19,4 +21,4 @@
 
 .App-link {
   color: #09d3ac;
-}
+} */
